Track the 8.0 branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "website_crm_captcha"]
 	path = website_crm_captcha
 	url = https://github.com/tvibliani/website_crm_captcha.git
+	branch = 8.0
